--- a/app/src/main/res/layout/fragment_assignment.xml
+++ b/app/src/main/res/layout/fragment_assignment.xml
@@ -17,10 +17,12 @@
             android:src="@drawable/icn_close" />
 
         <ProgressBar
+            android:id="@+id/progress"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="0dp"
             android:layout_height="8dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:progress="30" />
 
         <ImageView
             android:layout_width="12dp"
