--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -52,13 +52,27 @@
 
             </LinearLayout>
 
-            <com.andexert.expandablelayout.library.ExpandableLayout
-                android:id="@+id/expandableLayout"
-                xmlns:expandable="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.CardView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/cv_cards"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                expandable:headerLayout="@layout/item_cards_header"
-                expandable:contentLayout="@layout/item_cards_content"/>
+                android:layout_height="wrap_content"
+                android:background="#fafafa"
+                android:elevation="1dp"
+                app:cardCornerRadius="2dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Карточки"
+                    android:textSize="16sp"
+                    android:textColor="#222"
+                    android:textAllCaps="true"
+                    android:gravity="center"
+                    android:padding="22dp"/>
+
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
