--- a/app/src/main/res/layout/item_cards_content.xml
+++ b/app/src/main/res/layout/item_cards_content.xml
@@ -16,6 +16,7 @@
         android:textColor="#fff"/>
 
     <ImageView
+        android:id="@+id/iv_teaser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
@@ -39,4 +40,5 @@
         android:padding="20dp"
         android:gravity="center"
         android:background="#d32f2f"/>
+
 </LinearLayout>
