--- a/app/src/main/res/layout/item_cards_header.xml
+++ b/app/src/main/res/layout/item_cards_header.xml
@@ -15,7 +15,7 @@
         android:textSize="16sp"
         android:textColor="#222"
         android:textAllCaps="true"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:padding="22dp"/>
 
 </android.support.v7.widget.CardView>
