--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -52,6 +52,8 @@
 
             </LinearLayout>
 
+
+
             <android.support.v7.widget.CardView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:android="http://schemas.android.com/apk/res/android"
@@ -60,17 +62,64 @@
                 android:layout_height="wrap_content"
                 android:background="#fafafa"
                 android:elevation="1dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
                 app:cardCornerRadius="2dp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Карточки"
-                    android:textSize="16sp"
-                    android:textColor="#222"
-                    android:textAllCaps="true"
-                    android:gravity="center"
-                    android:padding="22dp"/>
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/btn_cards"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Карточки"
+                        android:textSize="16sp"
+                        android:textColor="#222"
+                        android:textAllCaps="true"
+                        android:gravity="center"
+                        android:padding="22dp"
+                        android:background="#fafafa"/>
+
+                    <LinearLayout
+                        android:id="@+id/ll_ex"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:background="#ff5252">
+
+                        <ImageView
+                            android:id="@+id/iv_teaser"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="22dp"
+                            android:src="@drawable/cards_teaser" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Рассортируйте карточки со словами"
+                            android:textSize="14sp"
+                            android:layout_marginBottom="20dp"
+                            android:textColor="#fff"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Начать тренировку"
+                            android:textColor="#fff"
+                            android:textSize="16sp"
+                            android:textAllCaps="true"
+                            android:padding="20dp"
+                            android:gravity="center"
+                            android:background="#d32f2f"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
