--- a/app/src/main/res/layout/fragment_assignment.xml
+++ b/app/src/main/res/layout/fragment_assignment.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F6F5F3"
     android:orientation="vertical"
     tools:context="ru.yamblz.translatetraining.AssignmentFragment">
 
