--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ffdd60</color>
     <color name="colorPrimaryDark">#B29A43</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#e5e5e5</color>
 </resources>
