--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,11 +9,10 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
-        <!--app:layout_collapseMode="pin"/>-->
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +24,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
-                android:background="@drawable/banner_img">
+                android:background="@drawable/banner_img"
+                android:layout_marginBottom="8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -52,76 +51,14 @@
 
             </LinearLayout>
 
-
-
-            <android.support.v7.widget.CardView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/cv_cards"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_start_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#fafafa"
-                android:elevation="1dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
-                app:cardCornerRadius="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/btn_cards"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Карточки"
-                        android:textSize="16sp"
-                        android:textColor="#222"
-                        android:textAllCaps="true"
-                        android:gravity="center"
-                        android:padding="22dp"
-                        android:background="#fafafa"/>
-
-                    <LinearLayout
-                        android:id="@+id/ll_ex"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center_horizontal"
-                        android:background="#ff5252">
-
-                        <ImageView
-                            android:id="@+id/iv_teaser"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="22dp"
-                            android:src="@drawable/cards_teaser" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Рассортируйте карточки со словами"
-                            android:textSize="14sp"
-                            android:layout_marginBottom="20dp"
-                            android:textColor="#fff"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Начать тренировку"
-                            android:textColor="#fff"
-                            android:textSize="16sp"
-                            android:textAllCaps="true"
-                            android:padding="20dp"
-                            android:gravity="center"
-                            android:background="#d32f2f"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+                android:scrollbars="vertical"
+                app:layoutManager="LinearLayoutManager"
+                android:paddingRight="16dp"
+                android:paddingLeft="16dp"/>
 
         </LinearLayout>
 
